[tool.poetry]
name = "ay"
version = "0.0.1"
description = ""
authors = ["Emre Özcan <emre@emreis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
lark = "^1.2.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
coverage = "^7.6.4"
flit = "^3.9.0"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
