[project]
name = "ay"
description = "Lua programming language written in Python"
authors = [
    {name = "Emre Özcan", email = "emre@emreis.com"},
]
maintainers = [
    {name = "Emre Özcan", email = "emre@emreis.com"},
]
readme = "README.md"
dynamic = ["version"]
requires-python = "<4.0,>=3.13"

[project.scripts]
ay = "ay.__main__:main"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=ay --cov-report html --cov-report xml"
pythonpath = "src"
testpaths = "tests"

[tool.black]
line-length = 80

[tool.mypy]
python_version = "3.13"

[project.urls]
Repository = "https://github.com/emreozcan/ay"
Issues = "https://github.com/emreozcan/ay/issues"

[build-system]
requires = ["flit_core ~=3.2"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["src/"]
