[tool.poetry]
name = "ay"
version = "0.0.1"
description = "Lua programming language written in Python"
authors = ["Emre Özcan <emre@emreis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
lark = "^1.2.2"
attrs = "^24.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
coverage = "^7.6.4"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^8.1.3"
furo = "^2024.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=ay --cov-report html --cov-report xml --junitxml=junit.xml -o junit_family=legacy"
pythonpath = "src"
testpaths = "tests"

[tool.black]
line-length = 80

[tool.mypy]
python_version = "3.10"
